--- a/exercise/irregular.css
+++ b/exercise/irregular.css
@@ -13,7 +13,7 @@ body {
 
 header {
   width: 100%;
-  background-color: #1565C0;
+  background-color: transparent;
   padding: 10px 0;
 }
 
@@ -25,8 +25,8 @@ nav {
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
 }
 
 .toolbar {
