--- a/exercise/irregular.css
+++ b/exercise/irregular.css
@@ -13,7 +13,7 @@ body {
 
 header {
   width: 100%;
-  background-color: transparent;
+  background-color: #181818;
   padding: 10px 0;
 }
 
@@ -25,8 +25,8 @@ nav {
 }
 
 .logo {
-  width: 100%;
-  height: 100%;
+  width: 30px;
+  height: 20px;
 }
 
 .toolbar {
