--- a/exercise/irregular.css
+++ b/exercise/irregular.css
@@ -140,7 +140,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #1565C0;
+  background-color: #181818;
   color: white;
   text-align: center;
   padding: 10px;
