--- a/exercise/irregular.css
+++ b/exercise/irregular.css
@@ -1,5 +1,8 @@
 /* Global styles */
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
