--- a/start.css
+++ b/start.css
@@ -3,18 +3,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #F5F5DC; /* Fond beige */
+  background-color: #F5F5F7; 
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  color: #1E3A8A;
+  color: #F5F5F7;
 }
 
 /* Barre de navigation */
 header {
   width: 100%;
-  background-color: #1565C0;
+  background-color: #333333;
   padding: 10px 0;
 }
 
