--- a/exe.css
+++ b/exe.css
@@ -144,24 +144,21 @@ nav {
   }
 }
 
-.snowflake:nth-child(1) { left: 10%; animation-duration: 8s; }
-.snowflake:nth-child(2) { left: 20%; animation-duration: 10s; }
-.snowflake:nth-child(3) { left: 30%; animation-duration: 12s; }
-.snowflake:nth-child(4) { left: 50%; animation-duration: 9s; }
-.snowflake:nth-child(5) { left: 70%; animation-duration: 11s; }
-.snowflake:nth-child(6) { left: 80%; animation-duration: 7s; }
 
-/* Footer */
+
+/* Style du footer */
 footer {
-  width: 100%;
-  background-color: #F5F5DC; /* Fond beige */
-  color: #1565C0;
-  text-align: center;
-  padding: 20px;
-  position: relative;
+  position: fixed;
   bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
 }
 
 footer p {
   margin: 0;
-}
+}  
