--- a/exe.css
+++ b/exe.css
@@ -14,7 +14,7 @@ body {
 /* Barre de navigation */
 header {
   width: 100%;
-  background-color: #1565C0;
+  background-color: #333333;
   padding: 10px 0;
 }
 
