--- a/exe.css
+++ b/exe.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #F5F5DC; /* Fond beige */
+  background-color: #F5F5F7; 
   display: flex;
   flex-direction: column;
   align-items: center;
