--- a/exercise/irregular.css
+++ b/exercise/irregular.css
@@ -138,7 +138,7 @@ h1 {
   margin-right: 10px;
 }
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
